# cmx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  license.md  pr.json  srgb.json  test.text
.github/workflows/: build-and-test.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
examples/: display_p3.icc  primaries.html  primaries.rs  set_relcolorimetric_intent.rs
examples/read_v5/: main.rs
examples/test_profiles/: SyncMaster-FF281C78-9B66-F2DF-C784-EF53F6DC3F4A.icc
examples/write/: main.rs
examples/write_json/: #1 2019-11-07 21-01 2.2 F-S 1xCurve+MTX.json  ACESCG Linear.json  AdobeRGB1998.json  Black & White.json  Blue Tone.json  Color LCD Calibrated.json  DCI(P3) RGB.json  Display P3.json  Generic CMYK Profile.json  Generic Gray Gamma 2.2 Profile.json  Generic Gray Profile.json  Generic Lab Profile.json  Generic RGB Profile.json  Generic XYZ Profile.json  Gray Tone.json  ITU-2020.json  ITU-709.json  LG HDR WQHD-4AF11AB5-8444-8FE6-C281-C1ABD42A1F0A.json  Lightness Decrease.json  Lightness Increase.json  ROMM RGB.json  Sepia Tone.json  SyncMaster-FF281C78-9B66-F2DF-C784-EF53F6DC3F4A.json  WebSafeColors.json  main.rs  sRGB Profile.json  sRGB.json
src/: checksum_edge_cases_test.rs  cmm_signatures.rs  common.rs  error.rs  header.rs  icc.rs  language.rs  lib.rs  profile.rs  profile_id_test.rs  roundtrip_edge_cases_test.rs  shared_tags_test.rs  signatures.rs  tag.rs  tag_signatures.rs  tags.rs  types.rs  util.rs
src/header/: icc_header_toml.rs  parsed_header.rs
src/profile/: abstract_profile.rs  checksum.rs  color_space_profile.rs  delegate.rs  device_link_profile.rs  display_profile.rs  input_profile.rs  named_color_profile.rs  output_profile.rs  raw_profile.rs  spectral_profile.rs  tag_setter.rs  with_tag.rs
src/signatures/: cmm.rs  colorspace.rs  device_class.rs  mod.rs  pcs.rs  platform.rs  tag.rs  tag_signature.rs  tagtype.rs  technology.rs  type_signature.rs
src/tag/: bradford.rs  header_tags.rs  parse.rs  parsed_tag.rs  tag_value.rs  tagdata.rs  tagtype.rs  toml.rs
src/tags/: chromaticity.rs  cmm.rs  colorspace.rs  common.rs  curve.rs  curve_type.rs  device_class.rs  header_tags.rs  lut8.rs  make_model.rs  measurement.rs  mod.rs  mod_old.rs  multi_localized_unicode.rs  named_color2.rs  native_display_info.rs  parametric_curve.rs  pcs.rs  platform.rs  profile_tags.rs  raw.rs  technology.rs  text_description.rs  toml.rs  typesignatures.rs  vcgp.rs  vcgt.rs  viewing_conditions.rs  xyz.rs
src/types/: chromaticity.rs  common.rs  lut8.rs  make_model.rs  measurement.rs  multi_localized_unicode.rs  named_color2.rs  native_display_info.rs  parametric_curve.rs  text_description.rs  vcgp.rs  vcgt.rs  viewing_conditions.rs
tests/: checksum_edge_cases_test.rs  displayP3.rs  profile_id_test.rs  roundtrip.rs  roundtrip_edge_cases_test.rs  shared_tags_test.rs  toml.rs
tests/profiles/: #1 2019-11-07 21-01 2.2 F-S 1xCurve+MTX.icc  Color LCD Calibrated.icc  Color LCD-37D8832A-perceptual.icc  Display P3_cmx.icc  LG HDR WQHD-4AF11AB5-8444-8FE6-C281-C1ABD42A1F0A.icc
tmp/: print.txt
xtask/: Cargo.toml
xtask/data/: CMM_Signatures.csv  ICC1_Tag_Signatures_by_value.csv  ICC1_Type_Signatures_by_value.csv  iccMAX_Tag_Signatures_by_Value.csv  iccMAX_Type_Signatures_by_Value.csv  icc_manufacturer_registry.csv  icc_tag_signatures_and_names.csv  icc_tag_signatures_names_rust_variants_abbr2.csv  (+7 more)
(+41 files in other folders)
