[package]
name = "cmx"
version = "0.0.2"
description = "Rust Spectral Color Management Library"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/cmx"
keywords = ["color_management", "icc_profiles", "iccmax"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "xtask",
    "."  # main crate
]

[features]
v5 = []

[dependencies]
anyhow = "1.0.99"
approx = "0.5.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
colorimetry = {path = "../colorimetry", version = "0.0.7"}
delegate = "0.13.4"
half = { version = "2.6", features = ["serde"] }
hex = "0.4.3"
indexmap = { version = "2.10.0", features = ["serde"] }
isocountry = "0.3.2"
isolang = { version = "2.0", features = ["serde"] }
md5 = "0.8.0"
nalgebra = "0.33.2"
num = "0.4.0"
num-derive = "0.4"
num-traits = "0.2.14"
paste = "1.0.15"
serde = { version = "1.0.125", features = ["derive"] }
serde_arrays = "0.2"
serde_json = "1.0.64"
strum = {version = "0.25", features = ["derive"]}  # for enum iteration and derive macros
thiserror = "2.0.12"
toml = "0.9.5"
zerocopy = { version = "0.8.26", features = ["derive", "alloc"] }

[[bin]]
name = "cmx"
path = "src/bin/cmx.rs"

[dev-dependencies]
glob = "0.3.0"

